--- a/snuffelaar-slaapkamer.yaml
+++ b/snuffelaar-slaapkamer.yaml
@@ -1,5 +1,6 @@
 substitutions:
   name: slaapkamer
+  friendly_name: Snuffelaar Slaapkamer
   dallas_addr: "0x1ecce062db21ff28"
   co2_alarm_off: "1799"
   co2_alarm_on: "1800"
