--- a/snuffelaar.yaml
+++ b/snuffelaar.yaml
@@ -1,5 +1,6 @@
 esphome:
   name: snuffelaar-${name}
+  friendly_name: ${friendly_name}
 
 esp32:
   board: esp32thing
@@ -45,7 +46,7 @@ one_wire:
 
 sensor:
   - platform: wifi_signal
-    name: "${name} WiFi Signal dB"
+    name: "WiFi Signal dB"
     update_interval: 10s
     state_topic: esphome/${name}/wifi_signal
     retain: false
@@ -53,7 +54,7 @@ sensor:
   - platform: mhz19
     uart_id: uart_mhz19
     co2:
-      name: "${name} CO2"
+      name: "CO2"
       state_topic: sensors/${name}/co2
       retain: false
       on_value_range:
@@ -70,21 +71,21 @@ sensor:
 
   - platform: bme280_i2c
     temperature:
-      name: "${name} BME280 Temperature"
+      name: "BME280 Temperature"
       state_topic: null
     pressure:
-      name: "${name} Barometer"
+      name: "Barometer"
       state_topic: sensors/${name}/pressure
       retain: false
     humidity:
-      name: "${name} Humidity"
+      name: "Humidity"
       state_topic: sensors/${name}/humidity
       retain: false
     address: 0x76
     update_interval: 10s
 
   - platform: dallas_temp
-    name: "${name} Temperature"
+    name: "Temperature"
     address: ${dallas_addr}
     state_topic: sensors/${name}/temperature
     retain: false
@@ -93,27 +94,27 @@ sensor:
     uart_id: uart_pms7003
     type: PMSX003
     pm_1_0:
-      name: "${name} Particulates <1.0μg/m³"
+      name: "Particulates <1.0μg/m³"
       state_topic: sensors/${name}/dust_mass/pm1.0
       retain: false
     pm_2_5:
-      name: "${name} Particulates <2.5μg/m³"
+      name: "Particulates <2.5μg/m³"
       state_topic: sensors/${name}/dust_mass/pm2.5
       retain: false
     pm_10_0:
-      name: "${name} Particulates <10.0μg/m³"
+      name: "Particulates <10.0μg/m³"
       state_topic: sensors/${name}/dust_mass/pm10.0
       retain: false
     update_interval: 30s
 
   - platform: sgp30
     tvoc:
-      name: "${name} TVOC"
+      name: "TVOC"
       accuracy_decimals: 0
       state_topic: sensors/${name}/organic_compounds
       retain: false
     eco2:
-      name: "${name} SGP30 eCO2"
+      name: "SGP30 eCO2"
       accuracy_decimals: 0
       state_topic: null
     store_baseline: yes
@@ -121,7 +122,7 @@ sensor:
     update_interval: 30s
 
   - platform: bh1750
-    name: "${name} Ambient Light"
+    name: "Ambient Light"
     address: 0x23
     update_interval: 10s
     state_topic: sensors/${name}/light_intensity
@@ -136,7 +137,7 @@ light:
     num_leds: 1
     rmt_channel: 0
     chipset: SK6812
-    name: "${name} Snuffelaar Led"
+    name: "Snuffelaar Led"
     effects:
       - pulse:
           name: "Slow Pulse"
@@ -150,4 +151,4 @@ switch:
     pin:
       number: 15
       mode: INPUT_PULLUP
-    name: "${name} Snuffelaar Button"
+    name: "Snuffelaar Button"
