--- a/hoera10jaar.yaml
+++ b/hoera10jaar.yaml
@@ -1,5 +1,6 @@
 esphome:
   name: hoera10jaar
+  friendly_name: Hoera10Jaar
   platformio_options:
     build_flags:
       - "-DARDUINO_RUNNING_CORE=0"
