--- a/miflora.yaml
+++ b/miflora.yaml
@@ -1,5 +1,6 @@
 esphome:
   name: miflora
+  friendly_name: MiFlora
   on_boot:
     priority: 250
     then:
@@ -60,51 +61,47 @@ sensor:
     temperature:
       name: "01 Temperature"
       state_topic: miflora/01/temperature
-      retain: false
     moisture:
       name: "01 Moisture"
       id: moisture_01
       state_topic: miflora/01/moisture
-      retain: false
     illuminance:
       name: "01 Illuminance"
       state_topic: miflora/01/illuminance
-      retain: false
     conductivity:
       name: "01 Soil Conductivity"
       state_topic: miflora/01/conductivity
-      retain: false
 
   - platform: xiaomi_hhccjcy01
     mac_address: '5C:85:7E:12:D4:11'
     temperature:
-      name: "Miflora 02 Temperature"
+      name: "02 Temperature"
       state_topic: miflora/02/temperature
     moisture:
-      name: "Miflora 02 Moisture"
+      name: "02 Moisture"
       id: moisture_02
       state_topic: miflora/02/moisture
     illuminance:
-      name: "Miflora 02 Illuminance"
+      name: "02 Illuminance"
       state_topic: miflora/02/illuminance
     conductivity:
-      name: "Miflora 02 Soil Conductivity"
+      name: "02 Soil Conductivity"
       state_topic: miflora/02/conductivity
 
   - platform: xiaomi_hhccjcy01
     mac_address: '5C:85:7E:12:D4:33'
     temperature:
-      name: "Miflora 03 Temperature"
+      name: "03 Temperature"
       state_topic: miflora/03/temperature
     moisture:
-      name: "Miflora 03 Moisture"
+      name: "03 Moisture"
       id: moisture_03
       state_topic: miflora/03/moisture
     illuminance:
-      name: "Miflora 03 Illuminance"
+      name: "03 Illuminance"
       state_topic: miflora/03/illuminance
     conductivity:
-      name: "Miflora 03 Soil Conductivity"
+      name: "03 Soil Conductivity"
       state_topic: miflora/03/conductivity
 
 font:
