--- a/snuffelaar-badkamer.yaml
+++ b/snuffelaar-badkamer.yaml
@@ -1,5 +1,6 @@
 substitutions:
   name: badkamer
+  friendly_name: Snuffelaar Badkamer
   dallas_addr: "0x6b3c01d0756ab128"
   co2_alarm_off: "999"
   co2_alarm_on: "1000"
