--- a/velux-zuid.yaml
+++ b/velux-zuid.yaml
@@ -1,5 +1,6 @@
 esphome:
-  name: velux-${name}
+  name: velux-zuid
+  friendly_name: Velux Zuid
 
 esp32:
   board: esp32thing
@@ -53,18 +54,16 @@ switch:
       - switch.turn_off: blind_stop
 
 cover:
-  - platform: time_based
-    name: "Velux ${name}"
+  - platform: template
+    name: "Velux Zuid"
     device_class: shutter
-    open_duration: 34s
+    optimistic: true
     open_action:
       - switch.turn_on: blind_up
-    close_duration: 34s
     close_action:
       - switch.turn_on: blind_down
     stop_action:
       - switch.turn_on: blind_stop
-    has_built_in_endstop: true
 
 sensor:
   - platform: wifi_signal
